hphp/hack/test/extended_reasons/fn_call.php.exp
error: Typing[4110] Invalid argument [1]
-> Expected string [2]
-> But got int [3]
-> Unnormalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rflow":[
                {"Rhint":[{"filename":"fn_call.php","line":5,"char_start":25,"char_end":27}]},
                {
                  "Rwitness":[{"filename":"fn_call.php","line":5,"char_start":29,"char_end":30}]
                }
              ]
            },
            {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":7,"char_end":8}]}
          ]
        },
        {
          "Rprj_symm":[
            {"Prj_symm_fn_arg":[0,0,{"Contravariant":[]}]},
            {
              "Rflow":[
                {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
                {
                  "Rrev":[
                    {
                      "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    {"Rhint":[{"filename":"fn_call.php","line":3,"char_start":14,"char_end":19}]}
  ]
} [3]
-> Normalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rflow":[
                {"Rhint":[{"filename":"fn_call.php","line":5,"char_start":25,"char_end":27}]},
                {
                  "Rwitness":[{"filename":"fn_call.php","line":5,"char_start":29,"char_end":30}]
                }
              ]
            },
            {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":7,"char_end":8}]}
          ]
        },
        {
          "Rprj_symm":[
            {"Prj_symm_fn_arg":[0,0,{"Contravariant":[]}]},
            {
              "Rflow":[
                {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
                {
                  "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
                }
              ]
            }
          ]
        }
      ]
    },
    {"Rhint":[{"filename":"fn_call.php","line":3,"char_start":14,"char_end":19}]}
  ]
} [3]
-> Path:
[
  {"Rhint":[{"filename":"fn_call.php","line":5,"char_start":25,"char_end":27}]},
  {"Fwd":[]},
  {
    "Rwitness":[{"filename":"fn_call.php","line":5,"char_start":29,"char_end":30}]
  },
  {"Fwd":[]},
  {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":7,"char_end":8}]},
  {"Fwd":[]},
  {"Prj_symm_fn_arg":[0,0,{"Contravariant":[]}]},
  {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
  {"Bwd":[]},
  {
    "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
  },
  {"Prj_symm_fn_arg":[0,0,{"Contravariant":[]}]},
  {"Fwd":[]},
  {"Rhint":[{"filename":"fn_call.php","line":3,"char_start":14,"char_end":19}]}
] [3]

fn_call.php:6:7
    1 | <?hh
    2 | 
[2] 3 | function foo(string $_, int $_, arraykey... $_): void {}
    4 | 
[3] 5 | function bar(string $x, int $y ): void{
[1] 6 |   foo($y, $x, 1, 'a', true);
    7 | }

error: Typing[4110] Invalid argument [1]
-> Expected int [2]
-> But got string [3]
-> Unnormalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rflow":[
                {"Rhint":[{"filename":"fn_call.php","line":5,"char_start":14,"char_end":19}]},
                {
                  "Rwitness":[{"filename":"fn_call.php","line":5,"char_start":21,"char_end":22}]
                }
              ]
            },
            {
              "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":11,"char_end":12}]
            }
          ]
        },
        {
          "Rprj_symm":[
            {"Prj_symm_fn_arg":[1,1,{"Contravariant":[]}]},
            {
              "Rflow":[
                {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
                {
                  "Rrev":[
                    {
                      "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    {"Rhint":[{"filename":"fn_call.php","line":3,"char_start":25,"char_end":27}]}
  ]
} [3]
-> Normalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rflow":[
                {"Rhint":[{"filename":"fn_call.php","line":5,"char_start":14,"char_end":19}]},
                {
                  "Rwitness":[{"filename":"fn_call.php","line":5,"char_start":21,"char_end":22}]
                }
              ]
            },
            {
              "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":11,"char_end":12}]
            }
          ]
        },
        {
          "Rprj_symm":[
            {"Prj_symm_fn_arg":[1,1,{"Contravariant":[]}]},
            {
              "Rflow":[
                {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
                {
                  "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
                }
              ]
            }
          ]
        }
      ]
    },
    {"Rhint":[{"filename":"fn_call.php","line":3,"char_start":25,"char_end":27}]}
  ]
} [3]
-> Path:
[
  {"Rhint":[{"filename":"fn_call.php","line":5,"char_start":14,"char_end":19}]},
  {"Fwd":[]},
  {
    "Rwitness":[{"filename":"fn_call.php","line":5,"char_start":21,"char_end":22}]
  },
  {"Fwd":[]},
  {
    "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":11,"char_end":12}]
  },
  {"Fwd":[]},
  {"Prj_symm_fn_arg":[1,1,{"Contravariant":[]}]},
  {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
  {"Bwd":[]},
  {
    "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
  },
  {"Prj_symm_fn_arg":[1,1,{"Contravariant":[]}]},
  {"Fwd":[]},
  {"Rhint":[{"filename":"fn_call.php","line":3,"char_start":25,"char_end":27}]}
] [3]

fn_call.php:6:11
    1 | <?hh
    2 | 
[2] 3 | function foo(string $_, int $_, arraykey... $_): void {}
    4 | 
[3] 5 | function bar(string $x, int $y ): void{
[1] 6 |   foo($y, $x, 1, 'a', true);
    7 | }

error: Typing[4110] Invalid argument [1]
-> Expected arraykey (variadic argument) [2]
-> But got bool [1]
-> Unnormalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":23,"char_end":26}]
            },
            {
              "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":23,"char_end":26}]
            }
          ]
        },
        {
          "Rprj_symm":[
            {"Prj_symm_fn_arg":[4,2,{"Contravariant":[]}]},
            {
              "Rflow":[
                {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
                {
                  "Rrev":[
                    {
                      "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "Rvar_param_from_decl":[{"filename":"fn_call.php","line":3,"char_start":45,"char_end":46}]
    }
  ]
} [1]
-> Normalized reason:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":23,"char_end":26}]
            },
            {
              "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":23,"char_end":26}]
            }
          ]
        },
        {
          "Rprj_symm":[
            {"Prj_symm_fn_arg":[4,2,{"Contravariant":[]}]},
            {
              "Rflow":[
                {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
                {
                  "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "Rvar_param_from_decl":[{"filename":"fn_call.php","line":3,"char_start":45,"char_end":46}]
    }
  ]
} [1]
-> Path:
[
  {
    "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":23,"char_end":26}]
  },
  {"Fwd":[]},
  {
    "Rwitness":[{"filename":"fn_call.php","line":6,"char_start":23,"char_end":26}]
  },
  {"Fwd":[]},
  {"Prj_symm_fn_arg":[4,2,{"Contravariant":[]}]},
  {"Rwitness":[{"filename":"fn_call.php","line":6,"char_start":3,"char_end":5}]},
  {"Bwd":[]},
  {
    "Rwitness_from_decl":[{"filename":"fn_call.php","line":3,"char_start":10,"char_end":12}]
  },
  {"Prj_symm_fn_arg":[4,2,{"Contravariant":[]}]},
  {"Fwd":[]},
  {
    "Rvar_param_from_decl":[{"filename":"fn_call.php","line":3,"char_start":45,"char_end":46}]
  }
] [1]

fn_call.php:6:23
    1 | <?hh
    2 | 
[2] 3 | function foo(string $_, int $_, arraykey... $_): void {}
    4 | 
    5 | function bar(string $x, int $y ): void{
[1] 6 |   foo($y, $x, 1, 'a', true);
    7 | }

3 errors found.
